style: fix header padding on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -468,12 +468,14 @@ iframe {
   }
 
   .logo-wrapper {
+    width: 368px;
     margin-left: auto;
     margin-right: auto;
   }
 
   .nav-menu-wrapper {
     margin-right: 0;
+    margin-bottom: 3em;
   }
 
   .hero-outer {
